GNU mailutils NEWS -- history of user-visible changes. 2021-06-08
See the end of file for copying conditions.

Please send mailutils bug reports to <bug-mailutils@gnu.org>.

Version 3.12.90 (git)

* Improved mailbox locking

This fixes several bugs.

* Changes in the 'locking' configuration statement.

New statement 'type' configures the type of locking to use.  Possible
values are: 'default', 'dotlock', 'external', 'kernel', and 'null'.

New statement 'pid-check' instructs mailutils to check if the PID of
the process owning the lock still exists in the process table.  If it
doesn't the lock is considered stale and is removed.

The 'flags' statement is deprecated.  If used, an error message is
issued along with a suggestion on what statement to use instead:

   Flag     Statement to use
  --------+-------------------
    E       type external     
    R       retry-count N
    T       expire-timeout N
    P       pid-check true

The 'retry-timeout' statement is a misnomer and is therefore
deprecated.  Use 'retry-sleep' instead.

* mail: fix semantics of mail sending and saving commands

* mail: fix the -F option

* mail: improve POSIX mailx compatible mode


Version 3.12, 2021-02-13

* Fix expunging of mailboxes in mbox and dotmail format in a read-only directory

The bug was reported at https://bugs.debian.org/cgi-bin/bugreport.cgi?bug=980042

* inc: when updating the "unseen" sequence, translate message numbers to uids

* Fix default port selection in SMTP mailer

* Fix building the mda utilities with mailbox quotas off

* Fix bugs in the testsuite


Version 3.11.1, 2021-01-05

This maintenance release fixes a bug in the library function
mu_url_create_hint that caused MH inc to coredump when called
without explicit -file option.

Version 3.11, 2020-12-23

* Support for the traditional mbox format rewritten from scratch

The new format library handles all flavors of the "mbox" format
family.  The created mailboxes adhere to the "mboxrd" format.
