@@ -1,4 +1,4 @@
-GNU mailutils NEWS -- history of user-visible changes. 2021-06-08
+GNU mailutils NEWS -- history of user-visible changes. 2021-06-09
 See the end of file for copying conditions.
 
 Please send mailutils bug reports to <bug-mailutils@gnu.org>.
@@ -37,6 +37,11 @@ deprecated.  Use 'retry-sleep' instead.
 
 * mail: improve POSIX mailx compatible mode
 
+* New mail variables
+
+  - fullnames
+      Controls whether personal parts of emails are preserved in
+      recipient addresses when replying.  Default is true.
 
 Version 3.12, 2021-02-13
 
